# indesap-tickets

./: .coverage  .pre-commit-config.yaml  Dokerfile  README.md  demo_sdk.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.github/workflows/.ruff_cache/: .gitignore
app/: __init__.py  main.py  schemas.py  storage.py
app/routes/: __init__.py  tickets.py
frontend/: index.html
sdk/: __init__.py
sdk/indesap_client/: __init__.py  client.py
sdk/tickets_client/: client.py
test/: test.py
tests/: conftest.py  test_.py  test_api_errors.py  test_api_get_by_id.py  test_close_double.py  test_get_after_close.py  test_sdk_client.py  test_sdk_happy_and_error.py  test_storage_unit.py  test_tickets.py
