[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indesap-tickets"
version = "0.1.0"
description = "Demo: API de tickets + SDK Python + CI para Indesap"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "requests>=2.32",
]

[tool.black]
line-length = 100

# Ruff (linter) — usa sintaxis nueva "lint.*"
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Si lo deseas, ignora líneas largas solo en tests:
# per-file-ignores = { "tests/*" = ["E501"], "test/*" = ["E501"] }

# mypy — limita el análisis a app/ y sdk/
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = "app sdk"

# Coverage (pytest-cov)
[tool.coverage.run]
source = ["app", "sdk"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
