[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indesap-tickets"
version = "0.1.0"
description = "Demo: API de tickets + SDK Python + CI para Indesap"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "requests>=2.32",
  "httpx>=0.27",
  "responses>=0.25",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# per-file-ignores = { "tests/*" = ["E501"], "test/*" = ["E501"] }

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = "app sdk"
explicit_package_bases = true
namespace_packages = true

[tool.coverage.run]
source = ["app", "sdk"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
