[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indesap-tickets"
version = "0.1.0"
description = "Demo: API de tickets + SDK Python + CI para Indesap"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "requests>=2.32",
  "httpx>=0.27",
  "responses>=0.25",
]


